--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.jar=${dist.dir}/LinkSnifferNew.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jgoodies-looks-2.6.0.jar=C:\\Users\\Chase Willden\\Downloads\\jgoodies-looks-2_6_0\\jgoodies-looks-2.6.0\\jgoodies-looks-2.6.0.jar
 file.reference.json-rpc-1.0.jar=lib/json-rpc-1.0.jar
 file.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.jgoodies-looks-2.6.0.jar}:\
     ${file.reference.json-rpc-1.0.jar}:\
     ${file.reference.jsoup-1.7.3.jar}
 # Space-separated list of extra javac options
