Did a ton, now it doesn't work!

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
+file.reference.jgoodies-looks-2.6.0.jar=C:\\Users\\willdech\\Documents\\NetBeansProjects\\LinkSnifferNew\\lib\\jgoodies-looks-2.6.0.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Chase Willden\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
+user.properties.file=C:\\Users\\willdech\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
