--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/LinkSnifferNew.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jfxrt.jar=C:\\Program Files (x86)\\Oracle\\JavaFX 2.0 SDK\\rt\\lib\\jfxrt.jar
 file.reference.jgoodies-looks-2.6.0.jar=C:\\Users\\Chase Willden\\Downloads\\jgoodies-looks-2_6_0\\jgoodies-looks-2.6.0\\jgoodies-looks-2.6.0.jar
 file.reference.json-rpc-1.0.jar=lib/json-rpc-1.0.jar
 file.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3.jar
@@ -37,7 +38,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jgoodies-looks-2.6.0.jar}:\
     ${file.reference.json-rpc-1.0.jar}:\
-    ${file.reference.jsoup-1.7.3.jar}
+    ${file.reference.jsoup-1.7.3.jar}:\
+    ${file.reference.jfxrt.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -72,7 +74,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Xshare:off
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
