--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,6 @@ dist.jar=${dist.dir}/LinkSnifferNew.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jfxrt.jar=C:\\Program Files (x86)\\Oracle\\JavaFX 2.0 SDK\\rt\\lib\\jfxrt.jar
 file.reference.jgoodies-looks-2.6.0.jar=C:\\Users\\Chase Willden\\Downloads\\jgoodies-looks-2_6_0\\jgoodies-looks-2.6.0\\jgoodies-looks-2.6.0.jar
 file.reference.json-rpc-1.0.jar=lib/json-rpc-1.0.jar
 file.reference.jsoup-1.7.3.jar=lib/jsoup-1.7.3.jar
@@ -38,8 +37,7 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.jgoodies-looks-2.6.0.jar}:\
     ${file.reference.json-rpc-1.0.jar}:\
-    ${file.reference.jsoup-1.7.3.jar}:\
-    ${file.reference.jfxrt.jar}
+    ${file.reference.jsoup-1.7.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
